[package]
name = "volatile"
version = "0.2.6"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
license = "MIT OR Apache-2.0"
keywords = ["volatile"]
description = "A simple volatile wrapper type"
documentation = "https://docs.rs/volatile"
repository = "https://github.com/phil-opp/volatile"

[dependencies]
zerocopy = { version = "0.2.8", optional = true }

[features]
default = [ "zerocopy", "const_fn" ]
const_fn = []
